@@ -474,6 +474,7 @@ i_writejpeg_wiol(i_img *im, io_glue *ig, int qfactor) {
 
   mm_log((1,"i_writejpeg(im %p, ig %p, qfactor %d)\n", im, ig, qfactor));
   
+  io_glue_commit_types(ig);
   i_clear_error();
 
   if (!(im->channels==1 || im->channels==3)) { 
@@ -495,7 +496,6 @@ i_writejpeg_wiol(i_img *im, io_glue *ig, int qfactor) {
     return 0;
   }
 
-  io_glue_commit_types(ig);
   jpeg_wiol_dest(&cinfo, ig);
 
   cinfo.image_width  = im -> xsize; 	/* image width and height, in pixels */
